--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "npm-run-all webpack webpack-dev-derver",
     "webpack": "webpack --config=./webpack/webpack.dev.config",
-    "webpack-dev-derver": "webpack-dev-server --config=./webpack/webpack.dev.config --hot --progress --colors --open"
+    "webpack-dev-derver": "webpack-dev-server --config=./webpack/webpack.dev.config --hot --progress --colors --open",
+    "build": "webpack --config=./webpack/webpack.production.config"
   },
   "repository": {
     "type": "git",
@@ -22,7 +23,9 @@
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.0",
-    "html-webpack-plugin": "^2.28.0"
+    "extract-text-webpack-plugin": "^2.1.0",
+    "html-webpack-plugin": "^2.28.0",
+    "webpack-cleanup-plugin": "^0.5.1"
   },
   "dependencies": {
     "webpack": "^2.3.2",
