--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "type": "git",
     "url": "git+https://github.com/shimizacken/webpack-template.git"
   },
-  "author": "",
+  "author": "Shimi Zacken",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/shimizacken/webpack-template/issues"
@@ -26,6 +26,7 @@
     "babel-preset-es2015": "^6.24.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^2.28.0",
+    "npm-run-all": "^4.0.2",
     "webpack-cleanup-plugin": "^0.5.1"
   },
   "dependencies": {
