--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
   },
   "dependencies": {
     "jquery": "^3.2.1",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-router": "^4.0.0",
     "webpack": "^2.3.2",
     "webpack-dev-server": "^2.4.2"
   }
