--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^2.28.0",
     "npm-run-all": "^4.0.2",
+    "webpack": "^2.3.2",
+    "webpack-dev-server": "^2.4.2",
     "webpack-cleanup-plugin": "^0.5.1"
   },
   "dependencies": {
@@ -36,8 +38,6 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
-    "react-router": "^4.0.0",
-    "webpack": "^2.3.2",
-    "webpack-dev-server": "^2.4.2"
+    "react-router": "^4.0.0"
   }
 }
