--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
   },
   "dependencies": {
     "jquery": "^3.2.1",
+    "js-polyfills": "^0.1.34",
     "react": "^15.4.2",
+    "react-d3": "^0.4.0",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
     "react-router": "^4.0.0"
