--- a/package.json
+++ b/package.json
@@ -24,13 +24,18 @@
   "devDependencies": {
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
+    "css-loader": "^0.28.9",
     "extract-text-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^2.28.0",
+    "node-sass": "^4.7.2",
     "npm-run-all": "^4.0.2",
-    "webpack": "^2.3.2",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.1",
+    "webpack": "^2.7.0",
     "webpack-cleanup-plugin": "^0.5.1",
     "webpack-dev-server": "^2.4.2"
   },
